--- a/Main/assets/css/main.css
+++ b/Main/assets/css/main.css
@@ -1524,7 +1524,7 @@ canvas.particles-js-canvas-el {
 
 @media (max-width: 991px) {
   .navbar-toggler span {
-    color: #1a1a1a;
+    color: #fafafa;
   }
   .skill-box {
     margin-top: 60px;
