--- a/Main/assets/css/main.css
+++ b/Main/assets/css/main.css
@@ -1319,7 +1319,7 @@ canvas.particles-js-canvas-el {
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
-.back-to-top {
+/* .back-to-top {
   position: fixed;
   display: none;
   right: 15px;
@@ -1343,7 +1343,7 @@ canvas.particles-js-canvas-el {
 .back-to-top i:hover {
   background: #f05852;
   color: #fff;
-}
+} */
 
 /*--------------------------------------------------------------
 # Disable AOS delay on mobile
