--- a/Main/assets/css/main.css
+++ b/Main/assets/css/main.css
@@ -538,6 +538,7 @@ canvas.particles-js-canvas-el {
   z-index: 11;
 }
 
+
 @keyframes circling {
   0% {
     transform: rotate(0deg) translate(-80px) rotate(0deg);
@@ -624,7 +625,7 @@ canvas.particles-js-canvas-el {
   box-shadow: inset 0 0 0 2000px rgba(241, 243, 246, 0.6);
 }
 
-.hero-04 .swiper-container {
+.hero-04 .-container {
   width: 100%;
   height: 100%;
 }
