--- a/Main/assets/css/main.css
+++ b/Main/assets/css/main.css
@@ -530,7 +530,7 @@ canvas.particles-js-canvas-el {
   height: 85px;
   background: #1ab394;
   border-radius: 50%;
-  opacity: 0.9;
+  opacity: 0.7;
   position: absolute;
   top: 150px;
   right: 34px;
@@ -562,22 +562,22 @@ canvas.particles-js-canvas-el {
   overflow: hidden;
   margin: auto;
   animation: circlereverse 22s linear infinite;
-  z-index: 11;
+  z-index: 5;
 }
 
 @keyframes circlereverse {
   0% {
-    transform: rotate(0deg) translate(-275px) rotate(0deg);
+    transform: rotate(0deg) translate(-175px) rotate(0deg);
   }
   100% {
-    transform: rotate(-360deg) translate(-275px) rotate(360deg);
+    transform: rotate(-360deg) translate(-175px) rotate(360deg);
   }
 }
 
 .hero-03 .floating {
   width: 50px;
   height: 50px;
-  background: #ff4274;
+  background: #ff645e;
   border-radius: 50%;
   opacity: 0.8;
   position: absolute;
@@ -586,6 +586,7 @@ canvas.particles-js-canvas-el {
   z-index: 1;
   animation: floating 5s linear infinite;
 }
+
 
 @keyframes floating {
   0% {
